<resources>
    <string name="app_name">Zonas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Etiquetas login-->
    <string name="login">Bienvenido</string>
    <string name="user_login">Usuario</string>
    <string name="password_login">Contraseña</string>
    <string name="button_enviar">Enviar</string>
    <string name="button_cancelar">Cancelar</string>

    <!-- Etiquetas Crear Municipio-->
    <string name="registar_mun">Registrar municipio</string>
    <string name="clave_crear">Clave IGECEM</string>
    <string name="nombre_crear">Municipio</string>
    <string name="significado_crear">Significado nombre</string>
    <string name="cabecera_crear">Cabecera Municipal</string>
    <string name="superficie_crear">Superficie</string>
    <string name="altitud_crear">Altitud</string>
    <string name="button_guardar_crear">Guardar</string>
    <string name="button_cancelar_crear">Cancelar</string>
    <string name="button_mapa_crear">Ir al mapa</string>


    <!-- Etiquetas Eliminar Municipio-->
    <string name="eliminar_mun">Eliminar Municipio</string>
    <string name="EditText_eliminar_elim">Clave IGECEM</string>
    <string name="Button_eliminar_elim">Eliminar</string>

    <!-- Etiquetas Modificar Municipio-->
    <string name="TextModificar">Modificar Municipio</string>
    <string name="EditText_clave">Clave IGECEM</string>
    <string name="ButtonBuscar_mod">Buscar</string>
    <!-- Etiquetas Modificar Municipio-->
    <string name="ButtonBuscar_list">Buscar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
